# bigerror

./: .ignore  Cargo.toml  LICENSE  README.md  _typos.toml  cliff.toml  justfile
.mergify/: config.yml
bigerror/: Cargo.toml
bigerror/examples/: demo.rs
bigerror/src/: attachment.rs  context.rs  error_stack.rs  lib.rs
bigerror/src/error_stack/: compat.rs  context.rs  error.rs  future.rs  macros.rs  report.rs  result.rs
bigerror/src/error_stack/compat/: anyhow.rs
bigerror/src/error_stack/frame/: kind.rs
bigerror/src/fmt/: hook.rs
bigerror/tests/: test_backtrace.rs  test_change_context.rs  test_debug.rs  test_iter.rs  test_provision.rs  test_span_trace.rs
bigerror/tests/snapshots/: test_debug__sources_nested@backtrace.snap  test_debug__sources_nested@spantrace.snap  test_debug__sources_nested_alternate@backtrace.snap
bigerror/tests/ui/: into_report.rs  must_use.rs
bigerror_derive/: Cargo.toml
bigerror_derive/src/: attributes.rs  context.rs  lib.rs
examples/: demo.rs  detect.rs  exit_code.rs  parse_config.rs
fmt/: rustfmt.toml
src/: attachment.rs  context.rs  error_stack.rs  fmt.rs  grpc.rs  kind.rs  lib.rs
src/error_stack/: CHANGELOG.md  README.md  compat.rs  context.rs  error.rs  fmt.rs  future.rs  hook.rs  iter.rs  macros.rs  report.rs  result.rs  serde.rs
src/error_stack/compat/: anyhow.rs  eyre.rs  mod.rs
src/error_stack/fmt/: charset.rs  color.rs  config.rs  hook.rs  location.rs  mod.rs
src/error_stack/frame/: frame_impl.rs  kind.rs  mod.rs
src/error_stack/hook/: context.rs  mod.rs
src/fmt/: charset.rs  color.rs  hook.rs
tests/: common.rs  test_attach.rs  test_attach_printable.rs  test_backtrace.rs  test_change_context.rs  test_compatibility.rs  test_conversion.rs  test_debug.rs  test_extend.rs  test_macros.rs  test_provision.rs  test_span_trace.rs
tests/snapshots/: test_debug__sources_nested_alternate@spantrace.snap
tests/ui/: macro_invalid_args.rs
