[package]
name = "bigerror"
version = "0.9.0"
edition = "2021"
description = "handle big errors ¯\\_(ツ)_/¯"
license = "MIT"

[features]
default = ["std"]

spantrace = ["dep:tracing-error", "std"]
std = ["anyhow?/std"]
eyre = ["dep:eyre", "std"]
serde = ["dep:serde"]
hooks = ['dep:spin']

grpc=["tonic", "tonic-types"]

[dependencies]
thiserror = "1"
tracing = "0.1"
tonic = { version = "0.11", optional = true }
tonic-types = { version = "0.11", optional = true }

tracing-error = { version = "0.2", optional = true, default-features = false }
anyhow = { version = ">=1.0.73", default-features = false, optional = true }
eyre = { version = "0.6", default-features = false, optional = true }
serde = { version = "1", default-features = false, optional = true }
spin = { version = "0.9", default-features = false, optional = true, features = ['rwlock', 'once'] }

[dev-dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
trybuild = "1.0.93"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
insta = { version = "1.38.0", features = ['filters', 'ron'] }
regex = "1.10.4"
expect-test = "1.5.0"
ansi-to-html = "0.2.1"
once_cell = "1.19.0"
supports-color = "3.0.0"
supports-unicode = "3.0.0"
owo-colors = "4.0.0"
thiserror = "1.0.59"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
targets = ["x86_64-unknown-linux-gnu"]

[[example]]
name = "demo"
required-features = ["std"]
doc-scrape-examples = true

[[example]]
name = "exit_code"
required-features = ["std"]
doc-scrape-examples = true

[[example]]
name = "parse_config"
required-features = ["std"]
doc-scrape-examples = true

[[example]]
name = "detect"
required-features = ['std']
doc-scrape-examples = true


[[test]]
name = "common"
test = false
