[workspace]
members = [
    "bigerror", "bigerror_derive",
    # "bigerror_dyn",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
description = "handle big errors ¯\\_(ツ)_/¯"
license = "MIT"
documentation = "https://docs.rs/bigerror"
repository = "https://github.com/knox-networks/bigerror"

[workspace.dependencies]
ansi-to-html = "0.2.1"
anyhow = { version = ">=1.0.73", default-features = false }
expect-test = "1.5.0"
eyre = { version = "0.6", default-features = false }
futures = { version = "0.3.30", default-features = false }
insta = "1.38.0"
once_cell = "1.19.0"
owo-colors = "4.0.0"
regex = "1.10.4"
serde = { version = "1", default-features = false }
serde_json = "1.0.116"
spin = { version = "0.9", default-features = false }
supports-color = "3.0.0"
supports-unicode = "3.0.0"
thiserror = "1"
tonic = "0.11"
tonic-types = "0.11"
tracing = "0.1"
tracing-error = { version = "0.2", default-features = false }
tracing-subscriber = "0.3.18"
trybuild = "1.0.93"
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"
thiserror-impl = "1.0.61"
