[workspace]
members = [
    "bigerror", "bigerror_derive",
]
resolver = "2"

[workspace.package]
version = "0.9.0-alpha"
edition = "2021"
description = "handle big errors ¯\\_(ツ)_/¯"
license = "MIT"
documentation = "https://docs.rs/bigerror"
repository = "https://github.com/knox-networks/bigerror"

[workspace.dependencies]
derive_more = { version = "1", features = ["display"] }
tracing = "0.1"
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"
bigerror-derive = { path = "./bigerror_derive", version = "0.9.0-alpha" }

[workspace.lints.clippy]
unexpected_cfgs = "allow"
