[package]
name = "bigerror-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
thiserror.workspace = true
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror-impl = { workspace = true }
